--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Set up conda ${{ matrix.python-version }}
         uses: conda-incubator/setup-miniconda@v2.2.0
         with:
+          miniconda-version: "latest"
           auto-update-conda: true
           activate-environment: test
           python-version: ${{ matrix.python-version }}
@@ -43,9 +44,13 @@ jobs:
         shell: bash -l {0}
         run: pip install scikit-build pytest pytest-cov pytest-benchmark
 
+      # - name: Install cuda
+      #   shell: bash -l {0}
+      #   run: conda install -y cudatoolkit 
+
       - name: Install pocl
         shell: bash -l {0}
-        run: conda install -y pocl
+        run: conda install -y pocl 
 
       - name: Compile
         shell: bash -l {0}
