--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,8 +72,9 @@ install(TARGETS ${CY_PACKAGE_NAME} DESTINATION ${LIB_INSTALL_DIR})
 if(APPLE)
     set(CY_PACKAGE_RPATH "@loader_path;${CMAKE_CURRENT_SOURCE_DIR}/${PY_PACKAGE_NAME}/lib")
 else()
-    set(CY_PACKAGE_RPATH "$ORIGIN;${CMAKE_CURRENT_SOURCE_DIR}/${PY_PACKAGE_NAME}/lib")
+    set(CY_PACKAGE_RPATH "$ORIGIN;${CMAKE_CURRENT_SOURCE_DIR}/${PY_PACKAGE_NAME}/lib:${CMAKE_CURRENT_SOURCE_DIR}/${PY_PACKAGE_NAME}/lib64")
 endif()
+
 set_target_properties(
     ${CY_PACKAGE_NAME} PROPERTIES
     INSTALL_RPATH "${CY_PACKAGE_RPATH}"
