--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ before-all = [
   "bash {package}/scripts/build-opencl-linux.sh",
 ]
 repair-wheel-command = "auditwheel show {wheel} && auditwheel repair --lib-sdir .libs -w {dest_dir} {wheel}"
-skip = ["cp27-*", "cp36-*", "pp*", "*-musllinux*"]
+skip = ["cp27-*", "cp36-*", "pp*", "*-musllinux*", "*_i686"]
 
 #[[tool.cibuildwheel.overrides]]
 #select = "*-musllinux*"
@@ -38,7 +38,7 @@ skip = ["cp27-*", "cp36-*", "pp*", "*-musllinux*"]
 
 [tool.cibuildwheel.windows]
 before-all = "bash {package}/scripts/build-opencl-windows.sh"
-environment = {SKBUILD_CONFIGURE_OPTIONS = "-DOpenCL_LIBRARY:FILEPATH='C:/Program Files/OpenCL-ICD-Loader/lib/OpenCL.lib' -DOpenCL_LIBRARIES:FILEPATH='C:/Program Files/OpenCL-ICD-Loader/lib/OpenCL.lib' -DOpenCL_FOUND:BOOL=TRUE"}
+environment = {SKBUILD_CONFIGURE_OPTIONS = "-DOpenCL_LIBRARIES:FILEPATH='C:/Program Files/OpenCL-ICD-Loader/lib/OpenCL.lib' -DOpenCL_INCLUDE_DIRS:PATH='C:/Program Files/OpenCL-ICD-Loader/include' -DOpenCL_FOUND:BOOL=TRUE"}
 skip = ["cp27-*", "cp36-*", "pp*", "*-win32"]
 
 [tool.cibuildwheel.macos]
