--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ endif()
 include(FetchContent)
 option(BUILD_TESTING  OFF)
 option(BUILD_BENCHMARK  OFF)
+option(BUILD_SHARED_LIBS OFF)
 FetchContent_Declare(
   CLIc 
   GIT_REPOSITORY https://github.com/clEsperanto/CLIc_prototype.git
@@ -68,6 +69,9 @@ target_include_directories(${CY_PACKAGE_NAME} PUBLIC "$<BUILD_INTERFACE:${WRAPPE
 # Install the target to the appropriate location
 install(TARGETS ${CY_PACKAGE_NAME} DESTINATION .)
 
+message(STATUS "CMAKE_INSTALL_LIBDIR: ${CMAKE_INSTALL_LIBDIR}")
+message(STATUS "CMAKE_INSTALL_BINDIR: ${CMAKE_INSTALL_BINDIR}")
+
 # Configure the RPATH based on the platform
 if(APPLE)
     set(CY_PACKAGE_RPATH "@loader_path;@loader_path/${CMAKE_INSTALL_LIBDIR};@loader_path/${CMAKE_INSTALL_BINDIR}") #${CMAKE_CURRENT_SOURCE_DIR}/${PY_PACKAGE_NAME}/lib:${CMAKE_CURRENT_SOURCE_DIR}/${PY_PACKAGE_NAME}/lib64")
@@ -75,13 +79,17 @@ else()
     set(CY_PACKAGE_RPATH "$ORIGIN;$ORIGIN/${CMAKE_INSTALL_LIBDIR};$ORIGIN/${CMAKE_INSTALL_BINDIR}") #${CMAKE_CURRENT_SOURCE_DIR}/${PY_PACKAGE_NAME}/lib:${CMAKE_CURRENT_SOURCE_DIR}/${PY_PACKAGE_NAME}/lib64")
 endif()
 
-
 set_target_properties(
     ${CY_PACKAGE_NAME} PROPERTIES
     INSTALL_RPATH "${CY_PACKAGE_RPATH}"
     BUILD_WITH_INSTALL_RPATH TRUE
     INSTALL_RPATH_USE_LINK_PATH TRUE
 )
+
+if(WIN32)
+  set_target_properties(${CY_PACKAGE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "./${CMAKE_INSTALL_BINDIR}")
+  set_target_properties(${CY_PACKAGE_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY "./${CMAKE_INSTALL_LIBDIR}" )
+endif()
 
 message(STATUS "CY_PACKAGE_RPATH: ${CY_PACKAGE_RPATH}")
 message(STATUS "CMAKE_INSTALL_LIBDIR: ${CMAKE_INSTALL_LIBDIR}")
