--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,13 +67,14 @@ install(TARGETS ${CY_PACKAGE_NAME} DESTINATION .)
 
 # Configure the RPATH based on the platform
 if(APPLE)
-    set(CY_PACKAGE_RPATH "@loader_path;@loader_path/${CMAKE_INSTALL_LIBDIR};@loader_path/${CMAKE_INSTALL_BINDIR}") 
-else()
-    set(CY_PACKAGE_RPATH "$ORIGIN;$ORIGIN/${CMAKE_INSTALL_LIBDIR};$ORIGIN/${CMAKE_INSTALL_BINDIR}") 
+    set(CY_PACKAGE_RPATH "@loader_path;@loader_path/${CMAKE_INSTALL_LIBDIR};@loader_path/${CMAKE_INSTALL_BINDIR}")
+elseif(UNIX)
+    set(CY_PACKAGE_RPATH "$ORIGIN;$ORIGIN/${CMAKE_INSTALL_LIBDIR};$ORIGIN/${CMAKE_INSTALL_BINDIR}")
+elseif(WIN32)
+    set(CY_PACKAGE_RPATH ".;./${CMAKE_INSTALL_LIBDIR};./${CMAKE_INSTALL_BINDIR}")
 endif()
 
-set_target_properties(
-    ${CY_PACKAGE_NAME} PROPERTIES
+set_target_properties(${CY_PACKAGE_NAME} PROPERTIES
     INSTALL_RPATH "${CY_PACKAGE_RPATH}"
     BUILD_WITH_INSTALL_RPATH TRUE
     INSTALL_RPATH_USE_LINK_PATH TRUE
