--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,10 +70,16 @@ install(TARGETS ${CY_PACKAGE_NAME} DESTINATION .)
 if(APPLE)
     set(CY_PACKAGE_RPATH "@loader_path;@loader_path/${CMAKE_INSTALL_LIBDIR};@loader_path/${CMAKE_INSTALL_BINDIR}")
 elseif(WIN32)
-    set(CY_PACKAGE_RPATH ".;./${CMAKE_INSTALL_LIBDIR};./${CMAKE_INSTALL_BINDIR}")
+    set(CY_PACKAGE_RPATH ".;@ORIGIN/${CMAKE_INSTALL_LIBDIR};@ORIGIN/${CMAKE_INSTALL_BINDIR}")
 else()
     set(CY_PACKAGE_RPATH "$ORIGIN;$ORIGIN/${CMAKE_INSTALL_LIBDIR};$ORIGIN/${CMAKE_INSTALL_BINDIR}")
 endif()
+
+# # Add the library directory to the RPATH
+# list(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}" isSystemDir)
+# if("${isSystemDir}" STREQUAL "-1")
+#     set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
+# endif()
 
 set_target_properties(${CY_PACKAGE_NAME} PROPERTIES
     INSTALL_RPATH "${CY_PACKAGE_RPATH}"
