test: rm ocl-icd-loader for mac deploy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,6 @@ environment = {SKBUILD_CONFIGURE_OPTIONS = "-DOpenCL_LIBRARIES:FILEPATH='C:/Prog
 skip = ["cp27-*", "cp36-*", "pp*", "*-win32"]
 
 [tool.cibuildwheel.macos]
-before-all = "bash {package}/scripts/build-opencl-macos.sh"
+# before-all = "bash {package}/scripts/build-opencl-macos.sh"
 environment = {MACOSX_DEPLOYMENT_TARGET = '10.14'}
 skip = ["cp27-*", "cp36-*", "pp*", "*_universal2"]
