--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,23 +66,26 @@ target_include_directories(${CY_PACKAGE_NAME} PUBLIC "$<BUILD_INTERFACE:${WRAPPE
 # Install the target to the appropriate location
 install(TARGETS ${CY_PACKAGE_NAME} DESTINATION .)
 
-# Configure the RPATH based on the platform
 if(APPLE)
-    set(CY_PACKAGE_RPATH "@loader_path;@loader_path/${CMAKE_INSTALL_LIBDIR};@loader_path/${CMAKE_INSTALL_BINDIR}")
-elseif(WIN32)
-    set(CY_PACKAGE_RPATH ".;@ORIGIN/${CMAKE_INSTALL_LIBDIR};@ORIGIN/${CMAKE_INSTALL_BINDIR}")
+    set_target_properties(
+        ${CY_PACKAGE_NAME} PROPERTIES INSTALL_RPATH "@loader_path/${CMAKE_INSTALL_LIBDIR};${CMAKE_PREFIX_PATH}/lib" INSTALL_RPATH_USE_LINK_PATH TRUE)
 else()
-    set(CY_PACKAGE_RPATH "$ORIGIN;$ORIGIN/${CMAKE_INSTALL_LIBDIR};$ORIGIN/${CMAKE_INSTALL_BINDIR}")
+    set_target_properties(${CY_PACKAGE_NAME} PROPERTIES INSTALL_RPATH
+        "$ORIGIN/${CMAKE_INSTALL_LIBDIR}:$ORIGIN/../lib:${CMAKE_PREFIX_PATH}/lib"
+        INSTALL_RPATH_USE_LINK_PATH TRUE)
 endif()
 
-# # Add the library directory to the RPATH
-# list(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}" isSystemDir)
-# if("${isSystemDir}" STREQUAL "-1")
-#     set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
+# # Configure the RPATH based on the platform
+# if(APPLE)
+#     set(CY_PACKAGE_RPATH "@loader_path;@loader_path/${CMAKE_INSTALL_LIBDIR};@loader_path/${CMAKE_INSTALL_BINDIR}")
+# elseif(WIN32)
+#     set(CY_PACKAGE_RPATH ".;@ORIGIN/${CMAKE_INSTALL_LIBDIR};@ORIGIN/${CMAKE_INSTALL_BINDIR}")
+# else()
+#     set(CY_PACKAGE_RPATH "$ORIGIN;$ORIGIN/${CMAKE_INSTALL_LIBDIR};$ORIGIN/${CMAKE_INSTALL_BINDIR}")
 # endif()
 
-set_target_properties(${CY_PACKAGE_NAME} PROPERTIES
-    INSTALL_RPATH "${CY_PACKAGE_RPATH}"
-    BUILD_WITH_INSTALL_RPATH TRUE
-    INSTALL_RPATH_USE_LINK_PATH TRUE
-)
+# set_target_properties(${CY_PACKAGE_NAME} PROPERTIES
+#     INSTALL_RPATH "${CY_PACKAGE_RPATH}"
+#     BUILD_WITH_INSTALL_RPATH TRUE
+#     INSTALL_RPATH_USE_LINK_PATH TRUE
+# )
