--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,14 @@ minimum-version = "0.4.7"
 cmake.minimum-version = "3.26.1"
 ninja.minimum-version = "1.11"
 ninja.make-fallback = false
+cmake.args = [
+  "-DCMAKE_BUILD_TYPE=Release",
+  "-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}",
+  "-DCMAKE_INSTALL_LIBDIR=${CMAKE_INSTALL_LIBDIR}",
+  "-DCMAKE_INSTALL_BINDIR=${CMAKE_INSTALL_BINDIR}",
+  "-DCMAKE_INSTALL_INCLUDEDIR=${CMAKE_INSTALL_INCLUDEDIR}",
+  "-DCMAKE
+]
 
 [project]
 name = "pyclesperanto"
