fix: pybind not found from skbuild

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,16 +26,16 @@ endif()
 set(Python_FIND_VIRTUALENV "FIRST")
 find_package(Python COMPONENTS Interpreter Development.Module REQUIRED)
 
-# if(SKBUILD)
-#   # Scikit-Build does not add your site-packages to the search path
-#   # automatically, so we need to add it _or_ the pybind11 specific directory
-#   # here.
-#   execute_process(
-#     COMMAND "${PYTHON_EXECUTABLE}" -c "import pybind11; print(pybind11.get_cmake_dir())"
-#     OUTPUT_VARIABLE _tmp_dir
-#     OUTPUT_STRIP_TRAILING_WHITESPACE COMMAND_ECHO STDOUT)
-#   list(APPEND CMAKE_PREFIX_PATH "${_tmp_dir}")
-# endif()
+if(SKBUILD)
+  # Scikit-Build does not add your site-packages to the search path
+  # automatically, so we need to add it _or_ the pybind11 specific directory
+  # here.
+  execute_process(
+    COMMAND "${PYTHON_EXECUTABLE}" -c "import pybind11; print(pybind11.get_cmake_dir())"
+    OUTPUT_VARIABLE _tmp_dir
+    OUTPUT_STRIP_TRAILING_WHITESPACE COMMAND_ECHO STDOUT)
+  list(APPEND CMAKE_PREFIX_PATH "${_tmp_dir}")
+endif()
 
 ## fetch CLIc using CMake FetchContent
 include(FetchContent)
