--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ cmake.minimum-version = "3.26.1"
 ninja.minimum-version = "1.11"
 ninja.make-fallback = false
 cmake.args = [
-  "-DCMAKE_PREFIX_PATH:PATH=$CONDA_PREFIX",
+  "-DCMAKE_PREFIX_PATH:PATH=${env:CONDA_PREFIX}",
 ]
 
 [project]
