test conda install cuda

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -44,9 +44,9 @@ jobs:
         shell: bash -l {0}
         run: pip install scikit-build pytest pytest-cov pytest-benchmark
 
-      # - name: Install cuda
-      #   shell: bash -l {0}
-      #   run: conda install -y cudatoolkit 
+      - name: Install cuda
+        shell: bash -l {0}
+        run: conda install -y cudatoolkit 
 
       - name: Install pocl
         shell: bash -l {0}
