--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Compile
         shell: bash -l {0}
         run: |
-          pip install . -vvv --config-settings=cmake.define.CMAKE_PREFIX_PATH=$CONDA_PREFIX
+          pip install . -vvv --config-settings=cmake.define.CMAKE_PREFIX_PATH=$CONDA_PATH
 
       - name: Tests
         shell: bash -l {0}
