--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ ninja.make-fallback = false
 
 [project]
 name = "pyclesperanto"
-version = "0.7.1"
+version = "0.7.0"
 description = "GPU-accelerated image processing in python using OpenCL"
 readme = "README.md"
 authors = [{ name = "Stephane Rigaud", email = "stephane.rigaud@pasteur.fr" }]
@@ -52,13 +52,13 @@ test-requires = ["numpy", "pytest", "pytest-cov", "pytest-benchmark"]
 [tool.cibuildwheel.linux]
 before-all = ["bash {package}/scripts/build-opencl-linux.sh"]
 repair-wheel-command = "auditwheel show {wheel} && auditwheel repair --lib-sdir .libs -w {dest_dir} {wheel}"
-skip = ["cp27-*", "cp36-*", "pp*", "*-musllinux*", "*_i686"]
+skip = ["cp27-*", "pp*", "*-musllinux*", "*_i686"]
 
 [tool.cibuildwheel.windows]
 before-all = "bash {package}/scripts/build-opencl-windows.sh"
 environment = { SKBUILD_CMAKE_ARGS = "-DOpenCL_LIBRARIES:FILEPATH='C:/Program Files/OpenCL-ICD-Loader/lib/OpenCL.lib';-DOpenCL_INCLUDE_DIRS:PATH='C:/Program Files/OpenCL-ICD-Loader/include/'" }
-skip = ["cp27-*", "cp36-*", "pp*", "*-win32"]
+skip = ["cp27-*", "pp*", "*-win32"]
 
 [tool.cibuildwheel.macos]
 environment = { MACOSX_DEPLOYMENT_TARGET = '10.14' }
-skip = ["cp27-*", "cp36-*", "pp*", "*_universal2"]
+skip = ["cp27-*", "pp*", "*_universal2"]
