--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,9 +30,9 @@ classifiers = [
   "License :: OSI Approved :: BSD License",
 ]
 dependencies = [
-  "numpy; python_version >='3.8'",
-  "toolz; python_version >='3.8'",
-  "matplotlib; python_version >='3.8'",
+  "numpy; python_version >='3.7'",
+  "toolz; python_version >='3.7'",
+  "matplotlib; python_version >='3.7'",
 ]
 
 [project.urls]
@@ -46,7 +46,7 @@ addopts = "-ra -q"
 testpaths = ["tests"]
 
 [tool.cibuildwheel]
-build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*"]
+build = ["cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*"]
 build-frontend = "build"
 build-verbosity = 1
 test-command = "pytest {project}/tests/test_import.py"
