set min v10.14 for osx

--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -30,6 +30,7 @@ requirements:
     - cmake
     - khronos-opencl-icd-loader      # [win or osx] 
     - ocl-icd      # [linux]
+    - osx >= 10.14      # [osx] 
   run:
     - python
     - numpy
