--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -37,7 +37,7 @@ requirements:
     - matplotlib
     - khronos-opencl-icd-loader      # [win or osx] 
     - ocl-icd      # [linux]
-    - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.9") }}  # [osx and x86_64]
+    # - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.9") }}  # [osx and x86_64]
 
 test:
   imports:
